@@ -7,6 +7,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Changed
 
+* fix various shellcheck violations
+
 ### Deprecated
 
 ### Removed
